# task-interfaces

./: .gitignore  setup.cfg  setup.py
src/: requirements.txt
src/task_interfaces/: __init__.py  meta_task.py  subscription_levels.py  task.py  task_v2.py  test_meta_task.py
tests/unit/: task_config.yaml  test_model.py  test_task.py
